# FERAT

./: .gitignore  CMakeLists.txt  README.md  ferat.py  pyproject.toml
ferat/: __init__.py  __main__.py  codes.py  deps.py  pipeline.py  proc.py  utils.py
tests/: .gitignore  .shared  benchmark-ferat  benchmark-ferat-instance  benchmark-ferp  benchmark-ferp-instance  benchmark-solvers  benchmark-solvers-instance  ferp-models-py3-bypass-ijtihad-fix.gz.tar
tests/ferat/fuzz/: fuzz0.qdimacs  fuzz1.qdimacs
